<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:fitsSystemWindows="false"
                                                 tools:context="com.vaskjala.vesiroosi20.pillipaevik.SeadedActivity">

    <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
                android:id="@+id/seaded_toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:theme="@style/Pillipaevik"
                app:popupTheme="@style/Pillipaevik"/>
    </com.google.android.material.appbar.AppBarLayout>
    <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_behavior="@string/appbar_scrolling_view_behavior">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                  android:orientation="vertical"
                  android:background="@color/pillipaevik_peamine_taust"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content">
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horisontaalne_aaris"
            android:layout_marginEnd="@dimen/horisontaalne_aaris"
            android:backgroundTint="@android:color/white"
            android:id="@+id/minueesnimi"
            android:hint="@string/minu_eesnimi_vihje"
            android:maxLength="32"
            android:inputType="textCapSentences"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:backgroundTint="@android:color/white"
                android:id="@+id/minuperenimi"
                android:hint="@string/minu_perenimi_vihje"
                android:maxLength="32"
                android:inputType="textCapSentences"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:backgroundTint="@android:color/white"
                android:id="@+id/minuepost"
                android:hint="@string/minu_e_post_vihje"
                android:maxLength="32"
                android:inputType="textEmailAddress"/>
        <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/eraldusjoone_paksus"
                android:layout_marginTop="@dimen/eraldusjoone_ylemine_aaris"
                android:layout_marginBottom="@dimen/eraldusjoone_alumine_aaris"
                android:background="@android:color/white" />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:backgroundTint="@android:color/white"
                android:id="@+id/muusikakool"
                android:hint="@string/muusikakooli_nimi_vihje"
                android:maxLength="64"
                android:inputType="textCapSentences"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:backgroundTint="@android:color/white"
                android:id="@+id/klass"
                android:hint="@string/klass_vihje"
                android:maxLength="16"
                android:inputType="textCapSentences"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:backgroundTint="@android:color/white"
                android:id="@+id/minuinstrument"
                android:hint="@string/pill_vihje"
                android:maxLength="32"
                android:inputType="textCapSentences"/>
        <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/eraldusjoone_paksus"
                android:layout_marginTop="@dimen/eraldusjoone_ylemine_aaris"
                android:layout_marginBottom="@dimen/eraldusjoone_alumine_aaris"
                android:background="@android:color/white" />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:backgroundTint="@android:color/white"
                android:id="@+id/opetajaeesnimi"
                android:maxLength="32"
                android:hint="@string/opetaja_eesnimi_vihje"
                android:inputType="textCapSentences"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:backgroundTint="@android:color/white"
                android:id="@+id/opetajaperenimi"
                android:maxLength="32"
                android:hint="@string/opetaja_perenimi_vihje"
                android:inputType="textCapSentences"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:backgroundTint="@android:color/white"
                android:id="@+id/opetajaepost"
                android:hint="@string/opetaja_e_post_vihje"
                android:maxLength="32"
                android:inputType="textEmailAddress"/>
        <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/eraldusjoone_paksus"
                android:layout_marginTop="@dimen/eraldusjoone_ylemine_aaris"
                android:layout_marginBottom="@dimen/eraldusjoone_alumine_aaris"
                android:background="@android:color/white" />
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:backgroundTint="@android:color/white"
                android:id="@+id/paevasharjutada"
                android:hint="@string/harjutamise_norm_vihje"
                android:inputType="number"
                android:maxLength="3"/>
        <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/eraldusjoone_paksus"
                android:layout_marginTop="@dimen/eraldusjoone_ylemine_aaris"
                android:layout_marginBottom="@dimen/eraldusjoone_alumine_aaris"
                android:background="@android:color/white" />
        <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:layout_marginTop="@dimen/eraldusjoone_ylemine_aaris"
                android:layout_marginBottom="@dimen/eraldusjoone_alumine_aaris"
                android:id="@+id/stopperiautostart"
                android:textOff="@string/ei"
                android:textOn="@string/jah"
                android:text="@string/stopperiautostart"/>
        <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:layout_marginTop="@dimen/eraldusjoone_ylemine_aaris"
                android:layout_marginBottom="@dimen/eraldusjoone_alumine_aaris"
                android:id="@+id/pikkvajutusalustabharjutuse"
                android:textOff="@string/ei"
                android:textOn="@string/jah"
                android:text="@string/pikkvajutusalustabharjutuse"/>
        <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:layout_marginTop="@dimen/eraldusjoone_ylemine_aaris"
                android:layout_marginBottom="@dimen/eraldusjoone_alumine_aaris"
                android:id="@+id/naitateosetanaststatistikat"
                android:textOff="@string/ei"
                android:textOn="@string/jah"
                android:text="@string/naitateosetanaststatistikat"/>
        <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:layout_marginTop="@dimen/eraldusjoone_ylemine_aaris"
                android:layout_marginBottom="@dimen/eraldusjoone_alumine_aaris"
                android:id="@+id/kasLubadaMikrofonigaSalvestamine"
                android:textOff="@string/ei"
                android:textOn="@string/jah"
                android:text="@string/kasLubadaMikrofonigaSalvestamine"
                android:onClick="KasSalvestameMikrofoniga"/>
        <Switch
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:layout_marginTop="@dimen/eraldusjoone_ylemine_aaris"
                android:layout_marginBottom="@dimen/eraldusjoone_alumine_aaris"
                android:id="@+id/kasKasutadaGoogleDrive"
                android:text="@string/kasKasutadaGoogleDrive"
                android:textOff="@string/ei"
                android:textOn="@string/jah"
                android:onClick="KasKasutameGoogleDrive"/>
        <TextView android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:layout_marginStart="@dimen/horisontaalne_aaris"
                  android:layout_marginEnd="@dimen/horisontaalne_aaris"
                  android:singleLine="false"
                  android:textSize="@dimen/vaike_font_abitekstide_jaoks"
                  android:textAppearance="?android:textAppearanceSmall"
                  android:text="@string/GoogleDriveVajalikkus"/>
        <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/horisontaalne_aaris"
                android:layout_marginEnd="@dimen/horisontaalne_aaris"
                android:id="@+id/googlekonto"
                android:hint="@string/google_konto_vihje"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:inputType="textEmailAddress"
                android:enabled="false"/>
        <View
                android:layout_width="fill_parent"
                android:layout_height="@dimen/eraldusjoone_paksus"
                android:layout_marginTop="@dimen/eraldusjoone_ylemine_aaris"
                android:layout_marginBottom="@dimen/eraldusjoone_alumine_aaris"
                android:background="@android:color/white" />
    </LinearLayout>
    </ScrollView>
</androidx.coordinatorlayout.widget.CoordinatorLayout>